# manim

./: pyproject.toml  requirements.txt
manimlib/camera/: camera.py
manimlib/mobject/svg/: text_mobject.py
