[tool.poetry]
name = "manimlib"
version = "0.1.0"
description = "Animation engine for explanatory math videos"
authors = [
    "Grant Sanderson <grant@3blue1brown.com>"
]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
argparse = "^1.4"
colour = "0.1.5"
Pillow = "5.2.0"
progressbar = "2.5"
scipy = "1.3.0"
tqdm = "4.24.0"
opencv-python = "3.4.2.17"
cairocffi = "^1.1"
pydub = "^0.23"
pyreadline =  "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
manim = "manimlib:main"